# nwb_benchmarks

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  asv.conf.json  license.txt  pyproject.toml  requirements-doc.txt
.github/: testing.yml
docs/: .readthedocs.yaml  conf.py  development.rst  index.rst  network_tracking.rst  requirements-rtd.txt  running_benchmarks.rst  setup.rst  using_asv.rst  writing_benchmarks.rst
environments/: nwb_benchmarks.yaml
results/: cli_output__timestamp-2024-11-22-00-27-24_machine-jupyter-oruebel_environment-5b0beaf70aec1987c24203e91cf0e7976bd0f740.txt  cli_output_timestamp-2024-11-21-17-48-30_machine-jupyter-oruebel_environment-5b0beaf70aec1987c24203e91cf0e7976bd0f740.txt  info_environment-2d1c68a2c7de02ab2c200e448b250bee5e46f212.json  info_environment-4a85d57591fe6e0e05654aa72b456df5dab8ecd5.json  info_environment-509c211421a12aeede580b602fde9cda8143b0aa.json  info_environment-5b0beaf70aec1987c24203e91cf0e7976bd0f740.json  info_environment-819e811ae0d4d7b81932109b976c94c7b8e7545d.json  info_environment-906f0439677e7f700f62a56b7b19036138b2ca2f.json  info_environment-91bf3abc58d3f9487dc3b25977d808fc1536e53f.json  info_environment-a73ad91b44dd0a09a65655ffb622bb5740392170.json  info_environment-c0130a551be84e54a46ed6ebe2db18d9f31440f0.json  info_environment-ce42cc15d22f43301e8ae6f57074792ce077d439.json  info_environment-eb6470cb320717ee52125b63c999aded074a9fc6.json  info_machine-9d805e6bc6fe1582a6a348d5cfddde3e86882815.json  info_machine-Ackermann.json  info_machine-Codys-MBP.attlocal.net.json  info_machine-DESKTOP-QJKETS8.json  info_machine-e9c0f1370ec8dc3640d91c7d0f381a6d61bd9a46.json  info_machine-f0-2f-4b-15-53-89.dhcp.lbnl.us.json  info_machine-jupyter-oruebel.json  info_machine-rly-m84.dhcp.lbl.gov.json  results_timestamp-2024-02-17-00-59-37_machine-9d805e6bc6fe1582a6a348d5cfddde3e86882815_environment-509c211421a12aeede580b602fde9cda8143b0aa.json  results_timestamp-2024-02-18-22-41-00_machine-e9c0f1370ec8dc3640d91c7d0f381a6d61bd9a46_environment-2d1c68a2c7de02ab2c200e448b250bee5e46f212.json  results_timestamp-2024-02-20-00-46-36_machine-e9c0f1370ec8dc3640d91c7d0f381a6d61bd9a46_environment-2d1c68a2c7de02ab2c200e448b250bee5e46f212.json  results_timestamp-2024-02-20-01-07-39_machine-e9c0f1370ec8dc3640d91c7d0f381a6d61bd9a46_environment-2d1c68a2c7de02ab2c200e448b250bee5e46f212.json  results_timestamp-2024-02-20-01-33-21_machine-e9c0f1370ec8dc3640d91c7d0f381a6d61bd9a46_environment-2d1c68a2c7de02ab2c200e448b250bee5e46f212.json  results_timestamp-2024-02-20-23-19-37_machine-e9c0f1370ec8dc3640d91c7d0f381a6d61bd9a46_environment-2d1c68a2c7de02ab2c200e448b250bee5e46f212.json  results_timestamp-2024-02-20-23-55-15_machine-e9c0f1370ec8dc3640d91c7d0f381a6d61bd9a46_environment-2d1c68a2c7de02ab2c200e448b250bee5e46f212.json  results_timestamp-2024-02-21-00-46-11_machine-e9c0f1370ec8dc3640d91c7d0f381a6d61bd9a46_environment-2d1c68a2c7de02ab2c200e448b250bee5e46f212.json  results_timestamp-2024-04-15-16-27-38_machine-Codys-MBP.attlocal.net_environment-819e811ae0d4d7b81932109b976c94c7b8e7545d.json  results_timestamp-2024-04-24-13-52-49_machine-f0-2f-4b-15-53-89.dhcp.lbnl.us_environment-4a85d57591fe6e0e05654aa72b456df5dab8ecd5.json  results_timestamp-2024-04-29-20-33-23_machine-Ackermann_environment-ce42cc15d22f43301e8ae6f57074792ce077d439.json  (+15 more)
(+74 files in other folders)
